--- a/news/News.iOS/News.iOS.csproj
+++ b/news/News.iOS/News.iOS.csproj
@@ -94,7 +94,7 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.482894" />
+    <PackageReference Include="Xamarin.Forms" Version="4.1.0.555618" />
     <PackageReference Include="Xamarin.TestCloud.Agent" Version="0.21.8" />
     <PackageReference Include="Microsoft.AppCenter.Analytics">
       <Version>2.0.0</Version>
@@ -124,11 +124,11 @@
       <Project>{B9BDA780-7F35-4623-8C6B-B595A8E21DCF}</Project>
       <Name>News</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\mobcat_shared\MobCAT\MobCAT.csproj">
+    <ProjectReference Include="..\..\..\mobcat-library\MobCAT\MobCAT.csproj">
       <Project>{CF339104-1F1C-4EBE-A2A4-07A2B40AC282}</Project>
       <Name>MobCAT</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\mobcat_shared\MobCAT.Forms\MobCAT.Forms.csproj">
+    <ProjectReference Include="..\..\..\mobcat-library\MobCAT.Forms\MobCAT.Forms.csproj">
       <Project>{829DFCCA-F21D-4923-86A6-7735EEE8E326}</Project>
       <Name>MobCAT.Forms</Name>
     </ProjectReference>
