--- a/in_memory_repository/OfflineSample.Android/OfflineSample.Android.csproj
+++ b/in_memory_repository/OfflineSample.Android/OfflineSample.Android.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -44,6 +44,9 @@
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MobCAT">
+      <HintPath>..\..\MobCAT\MobCAT\bin\Debug\netstandard2.1\MobCAT.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -53,6 +56,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="Polly">
+      <Version>7.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
@@ -88,10 +97,18 @@
     <AndroidResource Include="Resources\drawable\tab_feed.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\OfflineSample.Data.InMemory\OfflineSample.Data.InMemory.csproj">
+      <Project>{d57ef170-aafe-4553-bbe1-b5533366b2a9}</Project>
+      <Name>OfflineSample.Data.InMemory</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OfflineSample.Data\OfflineSample.Data.csproj">
+      <Project>{769bd72a-ab13-4432-abd6-26044f0f8b6c}</Project>
+      <Name>OfflineSample.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OfflineSample\OfflineSample.csproj">
       <Project>{A707B7ED-8EF7-471B-97CB-1D79E4C71F54}</Project>
       <Name>OfflineSample</Name>
     </ProjectReference>
   </ItemGroup>
- <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
