--- a/in_memory_repository/OfflineSample/OfflineSample.csproj
+++ b/in_memory_repository/OfflineSample/OfflineSample.csproj
@@ -1,12 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Polly" Version="7.2.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OfflineSample.Data.InMemory\OfflineSample.Data.InMemory.csproj" />
+    <ProjectReference Include="..\OfflineSample.Data\OfflineSample.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="MobCAT">
+      <HintPath>..\..\MobCAT\MobCAT\bin\Debug\netstandard2.1\MobCAT.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
