--- a/in_memory_repository/OfflineSample.Data.InMemory/OfflineSample.Data.InMemory.csproj
+++ b/in_memory_repository/OfflineSample.Data.InMemory/OfflineSample.Data.InMemory.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MobCAT" Version="1.0.6951" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OfflineSample.Data\OfflineSample.Data.csproj" />
   </ItemGroup>
 
