--- a/in_memory_repository/OfflineSample.Data/OfflineSample.Data.csproj
+++ b/in_memory_repository/OfflineSample.Data/OfflineSample.Data.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MobCAT" Version="1.0.6951" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="MobCAT">
       <HintPath>..\..\MobCAT\MobCAT\bin\Debug\netstandard2.1\MobCAT.dll</HintPath>
     </Reference>
