--- a/in_memory_repository/OfflineSample/OfflineSample.csproj
+++ b/in_memory_repository/OfflineSample/OfflineSample.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MobCAT" Version="1.0.6951" />
     <PackageReference Include="Polly" Version="7.2.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
