--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 *.DS_Store
+*.local_secrets.*
+google-services.json
 
 # Build results
 [Dd]ebug/
