--- a/notification_hub_backend_service/src/xamarin/PushDemo/PushDemo.iOS/PushDemo.iOS.csproj
+++ b/notification_hub_backend_service/src/xamarin/PushDemo/PushDemo.iOS/PushDemo.iOS.csproj
@@ -28,7 +28,7 @@
     <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
     <CodesignKey>Apple Development: Mike Parker (3LMFH324FY)</CodesignKey>
-    <CodesignProvision>VS: com.mobcat.PushDemo Development</CodesignProvision>
+    <CodesignProvision>nh_rest_sample_profile</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
@@ -50,12 +50,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <MtouchArch>ARM64</MtouchArch>
-    <CodesignKey>Apple Development: Mike Parker (3LMFH324FY)</CodesignKey>
+    <CodesignKey>iPhone Developer</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchLink>None</MtouchLink>
     <MtouchInterpreter>-all</MtouchInterpreter>
-    <CodesignProvision>VS: com.mobcat.PushDemo Development</CodesignProvision>
+    <CodesignProvision>nh_rest_sample_profile</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
