ios and android push notifications registrations and connection with the azure rest api

--- a/notification_hub_backend_service/src/reactnative/PushDemo/ios/Podfile
+++ b/notification_hub_backend_service/src/reactnative/PushDemo/ios/Podfile
@@ -77,6 +77,8 @@ target 'PushDemo' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNCPushNotificationIOS', :path => '../node_modules/@react-native-community/push-notification-ios'
+
   target 'PushDemoTests' do
     inherit! :complete
     # Pods for testing
