--- a/notification_hub_backend_service/src/reactnative/PushDemo/android/settings.gradle
+++ b/notification_hub_backend_service/src/reactnative/PushDemo/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'PushDemo'
+include ':react-native-push-notification'
+project(':react-native-push-notification').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-push-notification/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
