Android and API simplifications

--- a/notification_hub_backend_service/src/azure/PushDemoApi/PushDemoApi/PushDemoApi.csproj
+++ b/notification_hub_backend_service/src/azure/PushDemoApi/PushDemoApi/PushDemoApi.csproj
@@ -12,4 +12,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.NotificationHubs" Version="3.3.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Models\PushTemplates.cs">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Compile>
+  </ItemGroup>
 </Project>
