--- a/notification_hub_backend_service/src/reactnative/PushDemo/android/app/src/main/AndroidManifest.xml
+++ b/notification_hub_backend_service/src/reactnative/PushDemo/android/app/src/main/AndroidManifest.xml
@@ -7,8 +7,9 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
-      android:name="com.pushdemo.MainApplication"
+      android:name=".MainApplication"
       android:label="@string/app_name"
+      android:usesCleartextTraffic="true"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
@@ -39,7 +40,7 @@
       </service>
 
       <activity
-        android:name="com.pushdemo.MainActivity"
+        android:name=".MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
         android:launchMode="singleTask"
