device id support for ios and android

--- a/notification_hub_backend_service/src/reactnative/PushDemo/ios/Podfile
+++ b/notification_hub_backend_service/src/reactnative/PushDemo/ios/Podfile
@@ -79,6 +79,8 @@ target 'PushDemo' do
 
   pod 'RNCPushNotificationIOS', :path => '../node_modules/@react-native-community/push-notification-ios'
 
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
+
   target 'PushDemoTests' do
     inherit! :complete
     # Pods for testing
