--- a/notification_hub_backend_service/src/reactnative/PushDemo/package.json
+++ b/notification_hub_backend_service/src/reactnative/PushDemo/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/push-notification-ios": "^1.2.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-device-info": "^5.6.1",
     "react-native-push-notification": "^3.5.2"
   },
   "devDependencies": {
