--- a/notification_hub_backend_service/src/xamarin/PushDemo/PushDemo.Android/Properties/AndroidManifest.xml
+++ b/notification_hub_backend_service/src/xamarin/PushDemo/PushDemo.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.mobcat.pushdemo">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.mobcat.pushdemo" android:allowBackup="false">
 	<uses-sdk android:minSdkVersion="26" android:targetSdkVersion="29" />
 	<application android:label="PushDemo.Android" />
 	<uses-permission android:name="android.permission.INTERNET" />
