--- a/notification_hub_backend_service/src/reactnative/PushDemo/package.json
+++ b/notification_hub_backend_service/src/reactnative/PushDemo/package.json
@@ -7,7 +7,8 @@
     "ios": "npx react-native run-ios",
     "start": "npx react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "configure": "cp .app.config.tsx src/config/AppConfig.tsx"
   },
   "dependencies": {
     "@react-native-community/push-notification-ios": "^1.2.2",
