--- a/onnx_runtime/InferencingSample/InferencingSample.Android/InferencingSample.Android.csproj
+++ b/onnx_runtime/InferencingSample/InferencingSample.Android/InferencingSample.Android.csproj
@@ -64,7 +64,7 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2244" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime">
-      <Version>1.10.0-dev-20211007-0712-73c0796ac</Version>
+      <Version>1.10.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
