--- a/onnx_runtime/InferencingSample/InferencingSample.iOS/InferencingSample.iOS.csproj
+++ b/onnx_runtime/InferencingSample/InferencingSample.iOS/InferencingSample.iOS.csproj
@@ -128,7 +128,7 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2244" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime">
-      <Version>1.10.0-dev-20211007-0712-73c0796ac</Version>
+      <Version>1.10.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
